@@ -2793,7 +2793,7 @@ decode_switches (int argc, char **argv, int env)
 
                       if (i < 1 || cp[0] != '\0')
                         {
-                          error (NILF, _("the '-%c' option requires a positive integral argument"),
+                          error (NILF, _("the '-%c' option requires a positive integer argument"),
                                  cs->c);
                           bad = 1;
                         }
