@@ -1566,7 +1566,7 @@ conditional_line (char *line, int len, const gmk_floc *flocp)
   /* Found one: skip past it and any whitespace after it.  */
   line = next_token (line + len);
 
-#define EXTRANEOUS() error (flocp, _("Extraneous text after '%s' directive"), cmdname)
+#define EXTRANEOUS() error (flocp, _("extraneous text after '%s' directive"), cmdname)
 
   /* An 'endif' cannot contain extra text, and reduces the if-depth by 1  */
   if (cmdtype == c_endif)
@@ -2082,7 +2082,7 @@ record_files (struct nameseq *filenames, const char *pattern,
              more than once.  Just give a warning since this is harmless.  */
           if (cmds != 0 && cmds == f->cmds)
             error (flocp,
-                   _("target '%s' given more than once in the same rule."),
+                   _("target '%s' given more than once in the same rule"),
                    f->name);
 
           /* Check for two single-colon entries both with commands.
